2009-12 Erwin Waterlander <waterlan@xs4all.nl>
	* man page: Replace hyphens with minus signs (look like dashes) where needed.
	* man page: Update ISO mode information.

2009-12-15 Erwin Waterlander <waterlan@xs4all.nl>
	* version 4.0
	* Added internationalisation using gettext.
	* Added Dutch translation.
	* Ported to Win32 using Mingw32 <http://www.mingw.org/>
	* Ported to DOS using DJGPP <http://www.delorie.com/djgpp/>
	* Fixed problem in DOS/Windows stdio mode.
	* New option -L/--license that prints software license.
	* Code cleanup
	* Update manual

2009-12-04 Erwin Waterlander <waterlan@xs4all.nl>
	* version 3.2
	* version.mk: New file.
	* README: New file.
	* INSTALL: Updated.
	* Makefile: Makefile according GNU standards.
	* ChangeLog : New file.
	* Applied all patches from RedHat:
	  - use mkstemp i.s.o. mktemp: Nov 17 2000 Tim Powers <timp@redhat.com> 
	  - segfault: Jan 17 2002 Bernhard Rosenkraenzer <bero@redhat.com>
	  - safeconv: Oct 20 2004 Miloslav Trmac <mitr@redhat.com>
	  - manpage-update: Oct  6 2004 Mike A. Harris <mharris@redhat.com>
	  - preserve-file-modes: Feb  6 2007 Tim Waugh <twaugh@redhat.com>
	  - tmppath: Apr 13 2005 Tim Waugh <twaugh@redhat.com>
	  - c-missing-arg: Jan 18 2008 Tim Waugh <twaugh@redhat.com>
	  - Remove trailing white space.

1998-11-19 Christian Wurll <wurll@ira.uka.de>
	* version 3.1
	* Added extra newline if ^M occurs

1998-02-04 Bernd Johannes Wuebben <wuebben@kde.org>
	* version 3.0
	* Added Mac text file translation, i.e. \r to \n conversion

1995-03-30 Benjamin Lin <blin@socs.uts.edu.au>
	* version 2.2
	* Fixed a bug in 2.1 where in new file mode, if outfile already exists
	* conversion can not be completed properly.

1995-03-29 Benjamin Lin <blin@socs.uts.edu.au>
	* version 2.1
	* Conversion to SunOS charset implemented.

1995-03-19 Benjamin Lin <blin@socs.uts.edu.au>
	* version 2.0
	* Rewritten from scratch.

1995-03-16 Benjamin Lin <blin@socs.uts.edu.au>
	* version 1.2